tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_host_header_in_destination/tproxy/to_b/_test_context/VirtualService.2109752463.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      headers:
        request:
          set:
            Host: my-custom-authority
